Font awesome path fix, overflow pages fixed, urls home page

--- a/resources/assets/mdb/_custom-styles.scss
+++ b/resources/assets/mdb/_custom-styles.scss
@@ -898,6 +898,9 @@ body.my-background{
 #clientes-slider .slick-center img{
 	width: 100%;
 }
+.home hr{
+  width: 85%;
+}
 
 
 
